--- a/petunia/src/main/res/values/strings.xml
+++ b/petunia/src/main/res/values/strings.xml
@@ -70,6 +70,9 @@
 
     <!-- History fragment -->
     <string name="title_history">History</string>
+    <string name="delta">delta:</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 
 
 </resources>
